// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. default layout 1`] = `
<Component
  aspectRatio={1.5}
>
  <ImageBackground
    source={
      Object {
        "uri": "http://example.com/image.jpg?resize=1440",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Placeholder />
  </ImageBackground>
</Component>
`;

exports[`1. prepend https schema 1`] = `
<Component
  aspectRatio={1.5}
>
  <ImageBackground
    source={
      Object {
        "uri": "https://example.com/image.jpg?resize=1440",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Placeholder />
  </ImageBackground>
</Component>
`;

exports[`2. default layout without uri 1`] = `
<Component
  aspectRatio={1.5}
>
  <ImageBackground
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Placeholder />
  </ImageBackground>
</Component>
`;

exports[`3. should accept styling prop 1`] = `
<Component
  aspectRatio={1.5}
  style={
    Object {
      "width": 100,
    }
  }
>
  <ImageBackground
    source={
      Object {
        "uri": "http://example.com/image.jpg?resize=1440",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Placeholder />
  </ImageBackground>
</Component>
`;

exports[`4. loading image when width set 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Gradient
    degrees={264}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <T
        width={300}
      />
    </Component>
  </Gradient>
</Component>
`;
